--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="app_name">DinnerPlanner</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="app_desc">Welcome to Dinner Planner !\n\nHere you will be able to easily plan\nyour dinner.\n\nOn the next page start by\nselecting number of participants.\nThen select your courses.\n\nWatch Magic Happen!</string>
+    <string name="ins_crostini">Turn on the oven at 150C.\nCarve bread\nPut tomato and cheese on bread\nPlace in oven for 10 min.</string>
 
 </resources>
