--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,12 @@
     <string name="action_settings">Settings</string>
     <string name="app_desc">Welcome to Dinner Planner !\n\nHere you will be able to easily plan\nyour dinner.\n\nOn the next page start by\nselecting number of participants.\nThen select your courses.\n\nWatch Magic Happen!</string>
     <string name="ins_crostini">Turn on the oven at 150C.\nCarve bread\nPut tomato and cheese on bread\nPlace in oven for 10 min.</string>
-    <string name="starter_text">Starter</string>
-    <string name="main_text">Main</string>
-    <string name="dessert_text">Dessert</string>
+    <string name="text_starter">Starter</string>
+    <string name="text_main">Main</string>
+    <string name="text_dessert">Dessert</string>
+    <string name="start_button">Start</string>
+    <string name="text_participants">Participants</string>
+    <string name="text_totalCost">Total Cost:</string>
+    <string name="text_choosemenu">Choose Menu</string>
+    <string name="text_create">Create</string>
 </resources>
